# ProfessorScheduler

./: CMakeLists.txt  CreateAccount.cpp  CreateAccount.h  Functionalities.md  MainWindow.cpp  MainWindow.h  MainWindow.xaml  MainWindow.xaml.cs  ProfessorWindow.cpp  ProfessorWindow.h  README.md  Schedule.cpp  Schedule.h  SchedulesWindow.cpp  SchedulesWindow.h  User.cpp  User.h  main.cpp  schedule.css  schedule.html
Headers/: MainWindow.h  Professor.h  Schedule.h  SchedulesWindow.h  Student.h  TimeUtilis.h  User.h  UserFactory.h
Src/: CreateAccount.cpp  MainWindow.cpp  Professor.cpp  Schedule.cpp  SchedulesWindow.cpp  Student.cpp  User.cpp  UserFactory.cpp  main.cpp
